# domainradar-input

./: README.md  block2.list  config.example.json  custom.blocklist  pyproject.toml  source.list  top100.blocklist
feta_prefilter/: main.py  utils.py
feta_prefilter/Filters/: BaseFilter.py  CloudflareTopFilter.py  CustomPostgresFilter.py  FileBlockListFilter.py  MISPFilter.py  RandomDROPFilter.py  StarFilter.py  ValidDomainFilter.py  __init__.py
feta_prefilter/Outputs/: BaseOutput.py  PostgresOutput.py  StdOutput.py  __init__.py
feta_prefilter/Sources/: BaseSource.py  CesnetELKSource.py  ELKSource.py  FileSource.py  MISPSource.py  SimpleFileSource.py  StreamingFileSource.py  __init__.py
